FSD-Capstone-Project-1/Styles/home.css
:root {
    --bg-color-main: #a0512dc4;
    --logo-font-main: 'Lobster', cursive;
    --logo-font-color: wheat;
    --bg-color-navbar: #f3ddc5;
    --bg-color-nav-hover: #f0b87c;
}

body{
    background-color: lightgrey;
}

.header-row-1 {
    background-color: var(--bg-color-main);
    vertical-align: middle;
}

.site-name {
    font-family: var(--logo-font-main);
    font-size: xx-large;
    color: var(--logo-font-color);
}

.site-slogan {
    font-family: var(--logo-font-main);
    font-size: x-large;
    font-weight: 300;
    color: var(--logo-font-color);
}

.nav-content {
    vertical-align: middle;
    background-color: var(--bg-color-navbar);
}


.search-input {
    width: 55vw;
    border-radius: 0rem 0rem 0rem 0.5rem;

}

#btn-search {
    border-radius: 0rem 0.5rem 0rem 0rem;
    background-color: var(--bg-color-navbar);
}

#btn-login {
    border-radius: 0rem 0.5rem 0rem 0.5rem;
    background-color: var(--bg-color-navbar);
}

#btn-search:hover {
    background-color: var(--bg-color-nav-hover);
}

#btn-login:hover {
    background-color: var(--bg-color-nav-hover);
}

.nav-item {
    border-radius: 0rem 0.5rem 0rem 0.5rem;
}

.nav-item:hover {
    background-color: var(--bg-color-nav-hover);
}

.dropdown-item:hover {
    background-color: var(--bg-color-nav-hover);
}

@media screen and (min-width: 992px) {
    .dropdown:hover .dropdown-menu {
        display: block;
    }

    .dropdown .dropdown-menu {
        display: none;
    }
}


/*Footer Styling*/

.footer-link {
    color: lightgray;
}

.footer-link:hover {
    color: var(--bg-color-navbar);
}

.copyright {
    font-size: small;
}

/*Carousel Item Styling*/
.bg-image {
    filter: blur(5px);
    -webkit-filter: blur(5px);
    width: 100vw;
    height: 500px;
    object-fit: cover;
}

.site-corousel-title{
    font-size: 5rem;
    font-weight: 400;
}

.bg-text {
    background-color: rgb(0, 0, 0);
    background-color: rgba(0, 0, 0, 0.4);
    color: white;
    font-weight: bold;
    border: 3px solid #f1f1f1;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
    width: 80%;
    padding: 20px;
    text-align: center;
}

/*Carousel Card styles*/

.card {
    width: 16rem;
    background-color: #212e53;
    color: aliceblue;
}

.card-img-top{
    height: 22rem;
}

